# ECCO-ACCESS

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  interpolate_v4r3_3d.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: python-publish.yml
SLI-pipeline/: README.md
SLI-utils/: MANIFEST.in
SLI-utils/ecco_cloud_utils/: date_time.py  generalized_functions.py  llc_array_conversion.py  specific_functions.py
datasets/: generalized_assimilation_MODIS.py  generalized_assimilation_template.py
datasets/AQUARIUS_L3_SSS_SMI_MONTHLY_V5/: generalized_assimilation_Aquarius.py
datasets/AVHRR_OI-NCEI-L4-GLOB-v2.0/: generalized_assimilation_AVHRR.py
datasets/G02202/: generalized_assimilation_G02202.py
demo_grids/: make_demo_grids.py
doc/: Downloading_ECCO_Datasets_with_wget.md  ECCO_access_modes.ipynb  ECCO_access_subsets.ipynb  ECCO_access_v4r5.ipynb  ECCO_output_on_NASA_Earthdata.ipynb  Installation.rst  Querying_ECCO_variables.ipynb  Setup_Earthdata_credentials.ipynb  Using_ECCO_access.ipynb  Using_ECCO_access_1.ipynb  Using_ECCO_access_2.ipynb  conf.py  index.rst  intro.rst  requirements.txt
ecco-cloud-utils/: README.md  setup.py
ecco-pipeline/: README.md
ecco_access/: __init__.py  ecco_access.py  ecco_download.py  ecco_s3_retrieve.py  ecco_varlist.py
ecco_pipeline/: README.md  aggregation.py  grids_to_solr.py  pipeline_config.yaml  pipeline_config.yaml.tpl  requirements.txt  run_pipeline.py
ecco_pipeline/logs/: log.ini
generating_netcdf/: apply_metadata_fixes_for_1_valid_minmax_2_comments_3_summary_and_4_units_notebook.ipynb  apply_valid_minmax_notebook.ipynb  create_thumbnails.py  create_thumbnails_3D_time_invariant.py  eccov4r4_fix_metadata_final.py  eccov4r4_gen_for_podaac.py  eccov4r4_gen_for_podaac_1D.py  eccov4r4_gen_for_podaac_20200728.py  eccov4r4_gen_for_podaac_20200820.py  eccov4r4_gen_for_podaac_20201006.py  eccov4r4_gen_for_podaac_20201015.py  eccov4r4_gen_for_podaac_20201016.py  eccov4r4_gen_for_podaac_20201019.py  eccov4r4_gen_for_podaac_20201020_CLEAN.py  eccov4r4_gen_for_podaac_20201020_native.py  eccov4r4_gen_for_podaac_20201022_PFE_as_func.py  eccov4r4_qsub_latlon_daily_2D.csh  eccov4r4_qsub_latlon_daily_3D.csh  eccov4r4_qsub_latlon_daily_calculate_and_apply_valid_minmax.py  eccov4r4_qsub_latlon_daily_valid_minmax_v4  eccov4r4_qsub_native_daily_2D.csh  eccov4r4_qsub_native_daily_3D.csh  eccov4r4_qsub_native_daily_calculate_and_apply_valid_minmax.py  eccov4r4_qsub_native_daily_inst_valid_minmax_v5  eccov4r4_qsub_native_daily_valid_minmax_v4  eccov4r4_qsub_native_fix_ZuZl_kukl_daily.csh  eccov4r4_qsub_native_fix_ZuZl_kukl_snapshot.csh  eccov4r4_qsub_native_inst_valid_minmax_v4  eccov4r4_qsub_native_monthly_2D.csh  eccov4r4_qsub_native_monthly_3D.csh  eccov4r4_qsub_native_monthly_calculate_and_apply_valid_minmax.py  eccov4r4_qsub_native_monthly_valid_minmax_v4  eccov4r4_qsub_native_snapshot_calculate_and_apply_valid_minmax.py  eccov4r4_thumbnails.sh  gen_ECCO_V4r4_auxillary_native_grid_file_for_PODAAC.py  gen_ECCO_V4r4_time_invariant_mixing_fields_for_PODAAC.py  gen_lat_lon_V4r4_product_on_NAS.csh  gen_mon_mean_on_NAS.csh  gen_product_local_test.sh  generate_json_with_product_metadata_delivered_to_podaac.py  (+14 more)
grids_to_solr/: grids_to_solr.py
(+623 files in other folders)
