[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[simple]>=8.0"]

[project]
name = "ecco_access"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Access utilities for ECCO state estimate output hosted on PO.DAAC and in the AWS cloud"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "ecco_access Developers", email = "andrewdelman@ucla.edu" }
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
]
keywords = ['ecco','climate','mitgcm','estimate','circulation','climate']
dependencies = [
    "numpy",
    "future",
    "dask[complete]",
    "fsspec >= 2024.12.0",
    "netCDF4",
    "numcodecs >= 0.14.0",
    "pandas",
    "python-dateutil",
    "requests",
    "s3fs >= 2024.12.0",
    "tqdm",
    "xarray",
    "zarr >= 3.0.7"]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecco_access"]
exclude = ["demo_grids","ecco-cloud-utils","generating_netcdf","PODAAC","tests"]

[project.urls]
Homepage =  "https://github.com/ECCO-GROUP/ECCO-ACCESS"
Tracker =  "https://github.com/ECCO-GROUP/ECCO-ACCESS/issues"
